# Magentic-mini

./: .gitignore  Cargo.toml  README.md  dev_log.txt  magentic.drawio  start.sh
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/agents/: mod.rs
backend/src/agents/web_agent/: agent.rs  irreversible_prompt.txt  mod.rs  set_of_mark.rs
backend/src/api/: knowledge_base.rs
backend/src/clients/: embeder.rs  llm.rs  mod.rs  postgres.rs  py_client.rs
backend/src/common/: client.rs  mod.rs
backend/src/database/: env.rs  mod.rs  postgres_connect.rs  sqlx_postgres.rs
backend/src/orchestrator/: mod.rs  orchestrator.rs  plan.rs
backend/src/tools/: documents.rs  mod.rs  tool_metadata.rs  url_status_manager.rs
backend/src/tools/chrome/: browser.rs  chrome_ctrl.rs  mod.rs
backend/src/tools/utils/: markitdown_bridge.rs
frontend/: README.md  index.html  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.tsx  api.ts  types.ts  vite-env.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: PlanStep.tsx  Router.tsx
frontend/src/components/pages/: ChatPage.tsx  ChromePage.tsx  KnowledgePage.tsx  RAGChatPage.tsx
python-service/: pdf_loader.py  requirements.txt  start_service.sh
src/: lib.rs  main.rs  types.rs
src/agents/: agent.rs  mod.rs  orchestrator.rs  plan_agent.rs  web_surfer.rs
src/agents/plan_agent/: config.rs  messages.rs  mod.rs  plan_agent.rs  prompt.rs  types.rs  validation.rs
src/agents/plan_agent_utils/: prompt.rs
src/agents/web_agent/: agent.rs  config.rs  mod.rs  prompt.rs  rois.json  set_of_mark.rs  tool_define.rs  types.rs  web_agent.rs
src/api/: handlers.rs  routes.rs
src/browser/: client.rs
src/cli/: interface.rs  mod.rs
src/clients/: lib.rs  llm.rs  mod.rs
src/llm/: client.rs  mod.rs
src/manager/: mod.rs  task_manager.rs
src/orchestrator/: config.rs  message.rs  mod.rs  orchestrator.rs  planning.rs  types.rs
src/routes/: mod.rs  plan.rs
src/team/: container.rs  mod.rs  routed.rs  runtime.rs
src/tools/: mod.rs  url_status_manager.rs  util.rs
src/tools/base/: broad.rs  mod.rs  pub_sub.rs  token_limited.rs
src/tools/chrome/: chrome_ctrl.rs  chrome_state.rs  mod.rs  page_script.js  types.rs
src/tools/chromiumoxide/: browser.rs  chrome_ctrl.rs  chrome_state.rs  mod.rs  page_script.js  types.rs
src/tools/search/: bing_search.rs  mod.rs
src/tools/utils/: animation_utils.rs  markitdown_wrapper.py  mod.rs  webpage_text_utils.rs
src/types/: error.rs  event.rs  message.rs  mod.rs  plan.rs  task.rs
