[package]
name = "mini-magentic-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = "0.5"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
# 添加缺失的依赖
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
log = "0.4"

html2md = "0.2"
tiktoken-rs = "0.5"
tempfile = "3.0"
url = "2.4"
tldextract = "0.6"
urlencoding = "2.1"

# PDF 处理相关依赖
pdf-extract = "0.7"
lopdf = "0.32"
bytes = "1.0"