[package]
name = "mini-magentic-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thirtyfour = "0.35"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dialoguer = "0.11"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
log = "0.4"
lazy_static = "1.4"
rustyline = "13.0"

tokio-util = "0.7.15"
async-channel = "1.9"
dyn-clone = "1.0"

html2md = "0.2.1"
tiktoken-rs = "0.5.9"
tempfile = "3.8"
url = "2.4"
tldextract = "0.6"
urlencoding = "2.1"
regex = "1"

# PDF 处理相关依赖
pdf-extract = "0.7"
lopdf = "0.32"
bytes = "1.0"
image = "0.25.8"
